# job_tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  install-remote.sh  install.sh  job-tracker.sh  mkdocs.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: build-installer.yml  ci.yml  codeql.yml  docs.yml  release.yml
app/: __init__.py  __main__.py  config.py  export.py  models.py  routes.py  storage.py  tray.py
app/data/: phrases.json
app/i18n/: messages.pot
app/i18n/en/LC_MESSAGES/: messages.po
app/i18n/pt_BR/LC_MESSAGES/: messages.po
app/static/css/: app.css  style.css
app/static/js/: app.js
app/templates/: _icons.html  base.html  dashboard.html  focus.html  settings.html
docs-src/: api.en.md  api.md  configuration.en.md  configuration.md  contributing.en.md  contributing.md  index.en.md  index.md  installation.en.md  installation.md  language.en.md  language.md  troubleshooting.en.md  troubleshooting.md  user-guide.en.md  user-guide.md
installer/: build_installer.sh  installer.nsi
installer/resources/: install-service.bat  job-tracker-silent.vbs  timetrack.bat  uninstall-service.bat
tests/: conftest.py  test_config.py  test_export.py  test_i18n.py  test_models.py  test_routes.py  test_storage.py
